--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "size-limit": "11.2.0",
     "tsdx": "0.14.1",
     "tslib": "2.8.1",
-    "typescript": "3.9.10"
-  },
-  "dependencies": {
+    "typescript": "3.9.10",
     "assert": "2.1.0"
-  }
+  },
+  "dependencies": {}
 }
